Finish Details action of TodosController

--- a/GCD0704.AppDev/Views/Todos/Details.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Details.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Details</h2>
 
+@Html.ActionLink("Back to Index", "Index", "Todos", null, new { @class = "btn btn-primary" })
+
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">@Model.Name</h3>
