Implement Create action of TodosController

--- a/GCD0704.AppDev/Views/Todos/Index.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Index Todo</h2>
 
-<a href="" class="btn btn-primary">Create new Task</a>
+@Html.ActionLink("Create new Task", "Create","Todos", null,new { @class = "btn btn-primary"})
 
 <table class="table">
 	<thead>
