--- a/GCD0704.AppDev/Views/Todos/Index.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Index.cshtml
@@ -27,7 +27,9 @@
 				<td>@item.Description</td>
 				<td>@item.DueDate.ToString()</td>
 				<td>
-					<a href="" class="btn btn-default">Edit</a>
+					@Html.ActionLink("Edit the Task", "Edit", "Todos",
+								 new { id = item.Id},
+								 new { @class = "btn btn-default"})
 					@Html.ActionLink("Delete this task","Delete", "Todos",
 								 new { id = item.Id},
 								 new { @class = "btn btn-danger"})
