--- a/GCD0704.AppDev/Views/Todos/Create.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Create.cshtml
@@ -1,24 +1,34 @@
 ﻿@model GCD0704.AppDev.Models.Todo
 @{
-    ViewBag.Title = "Create";
+	ViewBag.Title = "Create";
 }
 
 <h2>Create New Task</h2>
 
 @Html.ActionLink("Back to Index", "Index", "Todos", null, new { @class = "btn btn-primary" })
 
-@using (@Html.BeginForm("Create", "Todos","POST"))
-{ 
-  <div class="form-group">
-    @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-    @Html.LabelFor(model => model.Description)
-    @Html.TextAreaFor(model => model.Description, new { @class = "form-control"})
-    @Html.LabelFor(model => model.DueDate)
-    @Html.TextBoxFor(model => model.DueDate,
-           new {@class = "form-control", @type = "date"})
-    <button type="submit"class="btn btn-primary">Create Task</button>
+@using (@Html.BeginForm("Create", "Todos", "POST"))
+{
+	<div class="form-group">
+		@Html.ValidationSummary(false, "", new { @class = "text-danger" })
+		@Html.LabelFor(model => model.Name)
+		@Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+		@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Description)
+		@Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
+		@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger " })
+	</div>
+	<div>
+		@Html.LabelFor(model => model.DueDate)
+		@Html.TextBoxFor(model => model.DueDate,
+					 new { @class = "form-control", @type = "date" })
+		@Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+	</div>
 
-  </div>
+	<button type="submit" class="btn btn-primary">Create Task</button>
+
+	
 }
 
