Add CateogyrId FK to Todo model

--- a/GCD0704.AppDev/Views/Todos/Details.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Details.cshtml
@@ -14,7 +14,10 @@
 	<div class="panel-body">
 		@Model.Description
 	</div>
-		<div class="panel-body">
+	<div class="panel-body">
 		@Model.DueDate
+	</div>
+	<div class="panel-body">
+		Category: @Model.Category.Name
 	</div>
 </div>
