--- a/GCD0704.AppDev/Views/Todos/Index.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Index.cshtml
@@ -23,6 +23,7 @@
 			<th scope="col">Task Name</th>
 			<th scope="col">Description</th>
 			<th scope="col">Due Date</th>
+			<th scope="col">Category</th>
 			<th scope="col">Action</th>
 
 		</tr>
@@ -35,6 +36,7 @@
 				<td>@item.Name</td>
 				<td>@item.Description</td>
 				<td>@item.DueDate.ToString()</td>
+				<td>@item.Category.Name</td>
 				<td>
 					@Html.ActionLink("Edit the Task", "Edit", "Todos",
 								 new { id = item.Id },
