--- a/GCD0704.AppDev/Views/Todos/Edit.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Edit.cshtml
@@ -14,21 +14,19 @@
 		@Html.LabelFor(model => model.Name)
 		@Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
 		@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.Description)
 		@Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
 		@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger " })
-
 	</div>
 	<div class="form-group">
 		@Html.LabelFor(model => model.DueDate)
 		@Html.TextBoxFor(model => model.DueDate, new { @class = "form-control", @type = "date" })
 		@Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
-
 	</div>
-	<button type="submit" class="btn btn-primary">Update Task</button>
-
+	<div class="form-group">
+		<button type="submit" class="btn btn-primary">Update Task</button>
+	</div>
 }
 
