--- a/GCD0704.AppDev/Views/Todos/Edit.cshtml
+++ b/GCD0704.AppDev/Views/Todos/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GCD0704.AppDev.Models.Todo
+﻿@model GCD0704.AppDev.ViewModels.TodoCategoriesViewModel
 @{
 	ViewBag.Title = "Edit";
 }
@@ -10,20 +10,28 @@
 	@Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
 	<div class="form-group">
-		@Html.HiddenFor(model => model.Id)
-		@Html.LabelFor(model => model.Name)
-		@Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-		@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+		@Html.HiddenFor(model => model.Todo.Id)
+		@Html.LabelFor(model => model.Todo.Name)
+		@Html.TextBoxFor(model => model.Todo.Name, new { @class = "form-control" })
+		@Html.ValidationMessageFor(model => model.Todo.Name, "", new { @class = "text-danger" })
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(model => model.Description)
-		@Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
-		@Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger " })
+		@Html.LabelFor(model => model.Todo.Description)
+		@Html.TextAreaFor(model => model.Todo.Description, new { @class = "form-control" })
+		@Html.ValidationMessageFor(model => model.Todo.Description, "", new { @class = "text-danger " })
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(model => model.DueDate)
-		@Html.TextBoxFor(model => model.DueDate, new { @class = "form-control", @type = "date" })
-		@Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+		@Html.LabelFor(model => model.Todo.CategoryId)
+		@Html.DropDownListFor(model => model.Todo.CategoryId,
+			new SelectList(Model.Categories, "Id", "Name"),
+			new { @class = "form-control" })
+		@Html.ValidationMessageFor(model => model.Todo.CategoryId, "", new { @class = "text-danger " })
+	</div>
+	<div class="form-group">
+		@Html.LabelFor(model => model.Todo.DueDate)
+		@Html.TextBoxFor(model => model.Todo.DueDate, 
+		 new { @class = "form-control", @type = "date", @Value = Model.Todo.DueDate.ToString("yyyy-MM-dd") })
+		@Html.ValidationMessageFor(model => model.Todo.DueDate, "", new { @class = "text-danger" })
 	</div>
 	<div class="form-group">
 		<button type="submit" class="btn btn-primary">Update Task</button>
